--- a/templates/start.html
+++ b/templates/start.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+        <link rel="stylesheet" href="/cssstart">
     </head>
     <body>
         <h1>Wgraj plik</h1>
