--- a/templates/upload.html
+++ b/templates/upload.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <link rel="stylesheet" href="cssupload">
+    <link rel="stylesheet" href="/cssupload">
     </head>
     <body>
         <h2>received image:</h2>
