Upload file doesn't work

--- a/templates/upload.html
+++ b/templates/upload.html
@@ -5,6 +5,6 @@
     </head>
     <body>
         <h2>received image:</h2>
-        <img src='/show' />
+        <img src='$$uri$$'/>
     </body>
 </html>
